# Baseball_Manager

./: .env  .gitignore  README.md  init_uv.sh  manage.py  package-lock.json  populate_db.py  pyproject.toml  run.sh
Baseball Management/: package-lock.json
Baseball Management/src/: login.jsx
Baseball_Management/: package-lock.json  package.json
Baseball_Management/public/: index.html
Baseball_Management/src/: App.css  App.js
Baseball_Manager/: asgi.py  settings.py  urls.py  wsgi.py
Documentacion/Diseño_de_la_base_de_datos/: Diseño_de_la_BD.tex  baseball_MERX.drawio  min_cover_3fn.py
Documentacion/Informe_Requerimientos/: Informe_General.tex  Informe_Requerimientos.tex
Documentacion/Informe_Técnico/: Informa_Técnico.tex
Documentacion/Manual_de_Usuario/: Manual_de_Usuario.tex
api/: authentication.py  models.py  permissions.py  roles.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_customuser_options.py  0003_alter_customuser_table.py
api/reports/: filters.py  queries.py  serializers.py  urls.py  views.py
db_structure/: models.py  repositories.py  serializers.py  services.py  views.py
db_structure/generic_classes/: BaseRepository.py  BaseService.py  BaseViewSet.py
db_structure/migrations/: 0001_initial.py  0002_remove_bpparticipation_primary_key_bp_participation_and_more.py  0003_remove_directionteam_td_id_remove_team_dt_id_and_more.py  0004_remove_playerinlineup_primary_key_player_in_lineup_and_more.py
db_structure/tests/: test_models.py  test_repositories.py  test_serializers.py  test_views.py
(+52 files in other folders)
